deployconfig/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: europe-north1-docker.pkg.dev/theinfinitelibrary/containers/theinfinitelibrary-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
